# freeswitch

./: Freeswitch.2017.sln
src/: switch_core_media.c  switch_http.c  switch_rtp.c
src/include/: switch_http.h
src/mod/endpoints/mod_gmeet/: .gitignore  CMakeLists.txt  README.md  gitversion.sh  gmeet_client.cpp  gmeet_rtc.c  gmeetclient.h  mod_gmeet.2017.vcxproj  mod_gmeet.c  mod_gmeet.h  mod_xmpp.2017.vcxproj  mod_xmpp.c  mod_xmpp.h  version.c.in  xmpp_client.cpp  xmpp_client.h  xmpp_rtc.c
src/mod/endpoints/mod_gmeet/conf/autoload_configs/: gmeet-rtc.conf.xml  xmpp-rtc.conf.xml
src/mod/endpoints/mod_gmeet/gmeet/: gmeetclient.cpp  gmeetclient.h  gmeetclientmgr.cpp  gmeetclientmgr.h  jinglebridgesession.h  jingledescription.cpp  jinglegroup.h  jinglepresence.cpp  jingletransport.h  logger.cpp  logger.h  sdputil.h  xmppconnection.cpp  xmppconnection.h
src/mod/endpoints/mod_gmeet/test/: test_xmpp_client.cpp
src/mod/endpoints/mod_gmeet/xmpp/: jinglebridgesession.cpp  jingledescription.h  jinglegroup.cpp  jinglepresence.h  jingletransport.cpp  jingletransport.h  logger.cpp  logger.h  sdputil.cpp  xmppclient.cpp  xmppclient.h  xmppclientmgr.cpp  xmppclientmgr.h  xmppconnection.cpp  xmppconnection.h
